k8s/resumehw-svc-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: darylresume
  namespace: darylresume
  labels:
    app: darylresume
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: darylresume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darylresume
  namespace: darylresume
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: darylresume
  template:
    metadata:
      labels:
        app: darylresume
    spec:
      containers:
        - name: darylresume
          image: darylwalsh/darylresume:1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
