k8s/acme-issuer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - { host_name_which_will_be_used_to_LB }
      secretName: { secretName }
  rules:
    - host: { host_name_which_will_be_used_to_LB }
      http:
        paths:
          - path: /
            backend:
              serviceName: { Your service name }
              servicePort: { Port exposed in container }
