k8s/resume-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resume-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - resume.blpc.us
      secretName: letsencrypt-production
  rules:
    - host: resume.blpc.us
      http:
        paths:
          - backend:
              serviceName: hello-kubernetes-first
              servicePort: 80
