k8s/resume_ingress.yaml
apiVersion:  networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - resume.blpc.us
      secretName: letsencrypt-prod
  rules:
  - host: resume.bplc.us
    http:
      paths:
      - backend:
          serviceName: resume
          servicePort: 80
