k8s/v11-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resume-ingress-eleven
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'

spec:
  tls:
    - hosts:
        - resume.blpc.us
      secretName: quickstart-example-tls
  rules:
    - host: resume.blpc.us
      http:
        paths:
          - path: /
            backend:
              serviceName: resume
              servicePort: 80
